Fixed map text color, added special background+border for invisible markers #966 @0.1

--- a/src/EsterenMaps/MapsBundle/Resources/public/css/maps.css
+++ b/src/EsterenMaps/MapsBundle/Resources/public/css/maps.css
@@ -21,8 +21,9 @@
 }
 
 #map_container,
-#map_container *{
+#map_container * {
     position: absolute;
+    color: black;
 }
 
 /** Conteneurs de points, lignes et polygones **/
